--- a/app_android/app/src/main/res/layout/fragment_lista.xml
+++ b/app_android/app/src/main/res/layout/fragment_lista.xml
@@ -10,4 +10,13 @@
         android:layout_height="wrap_content"
         android:text="Lista"
         android:textSize="24sp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
+        />
 </LinearLayout>
