--- a/app_android/app/src/main/res/layout/fragment_promociones.xml
+++ b/app_android/app/src/main/res/layout/fragment_promociones.xml
@@ -10,4 +10,9 @@
         android:layout_height="wrap_content"
         android:text="Promociones"
         android:textSize="24sp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerNegocios"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
