--- a/app_android/app/src/main/res/layout/item_detalle.xml
+++ b/app_android/app/src/main/res/layout/item_detalle.xml
@@ -38,7 +38,7 @@
         android:layout_height="40dp"
         android:background="@android:color/transparent"
         android:src="@android:drawable/ic_menu_delete"
-        android:contentDescription="Eliminar"
+        android:contentDescription="@string/desc_delete_product"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
